force-app/main/default/objects/Splunk_configuration__mdt/Splunk_configuration__mdt.object-meta.xml
<CustomObject>
    <description>data to be sent in the Splunk monitoring payload per event type</description>
    <label>Splunk configuration</label>
    <pluralLabel>Splunk configurations</pluralLabel>
</CustomObject>