force-app/main/default/objects/Splunk_configuration__mdt/fields/businessObject__c.field-meta.xml
<CustomField>
    <fullName>businessObject__c</fullName>
    <label>businessObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>