force-app/main/default/objects/Splunk_configuration__mdt/fields/businessProcess__c.field-meta.xml
<CustomField>
    <fullName>businessProcess__c</fullName>
    <label>businessProcess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>