force-app/main/default/objects/Splunk_configuration__mdt/fields/documentType__c.field-meta.xml
<CustomField>
    <fullName>documentType__c</fullName>
    <label>documentType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>