force-app/main/default/objects/Splunk_configuration__mdt/fields/entityType__c.field-meta.xml
<CustomField>
    <fullName>entityType__c</fullName>
    <label>entityType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>