force-app/main/default/objects/Splunk_configuration__mdt/fields/final__c.field-meta.xml
<CustomField>
    <fullName>final__c</fullName>
    <label>final</label>
    <length>255</length>
    <type>Text</type>
</CustomField>