force-app/main/default/objects/Splunk_configuration__mdt/fields/interfaceName__c.field-meta.xml
<CustomField>
    <fullName>interfaceName__c</fullName>
    <label>interfaceName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>