force-app/main/default/objects/Splunk_configuration__mdt/fields/stage__c.field-meta.xml
<CustomField>
    <fullName>stage__c</fullName>
    <label>stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>